address review comment